--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,11 @@
         {
             "matches": ["<all_urls>"],
           "js": ["annojs.js"]
-        }
+        },
+        {
+          "matches": ["<all_urls>"],
+        "js": ["content.js"]
+      }
       ],
     "web_accessible_resources": [
       {
